# TUGAS-BESAR-APLIKASI-

./: README.md  SETUP_README.md  brushpanel.cpp  brushpanel.h  main.cpp  mainwindow.cpp  resources.qrc  scribblearea.cpp  scribblearea.h  splashscreen.h
Ngebuk_warna_code/: CMakeLists.txt  app_icon.rc  brushpanel.cpp  generate_icon.py  mainwindow.cpp  mainwindow.h  resources.qrc  splashscreen.cpp
